--- a/css/estilos.css
+++ b/css/estilos.css
@@ -314,11 +314,7 @@ footer p {
   .esports__sec-logos {
     display: grid;
     grid-template-rows: 20vh 20vh 20vh 20vh 20vh;
-    grid-template-columns: 10vw 10vw 10vw 10vw; }
-  .esports__ter-logos {
-    display: inline-flex;
-    flex-flow: row wrap;
-    align-content: center; } }
+    grid-template-columns: 10vw 10vw 10vw 10vw; } }
 
 /***************************SOPORTE.HTML***************************/
 .marcoRojo {
