--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,6 @@
 @charset "UTF-8";
 /*Variables*/
+/*Body*/
 body {
   font-size: 62.5%;
   margin: 0;
@@ -56,7 +57,7 @@ footer p {
     .images__title {
       font-size: 1.5rem; } }
 
-/***************************TECLADOS.HTML***************************/
+/***************************PÁGINAS DE PRODUCTOS***************************/
 /*Texts styles*/
 .producto-pos1__text, .producto-pos2__text, .producto-pos3__text {
   color: white; }
@@ -162,7 +163,6 @@ footer p {
     position: absolute;
     top: 220vh; } }
 
-/***************************AURICULARES.HTML***************************/
 /*Texts styles*/
 .producto-pos4__text, .producto-pos5__text, .producto-pos6__text {
   color: white; }
@@ -350,7 +350,7 @@ footer p {
   .soporte {
     margin: 0px 15vw; } }
 
-/***************************SOPORTECE.HTML***************************/
+/***************************SOPORTECE.HTML (Correo electrónico)***************************/
 .soporte__form {
   margin: 0px 2vw; }
   .soporte__form h1 {
