--- a/css/estilos.css
+++ b/css/estilos.css
@@ -26,6 +26,33 @@ footer {
 footer p {
   margin: 0px; }
 
+.footer__links {
+  display: flex;
+  direction: row;
+  justify-content: center;
+  padding-top: 1vh;
+  column-gap: 8%;
+  font-size: 14px;
+  padding-left: 3%;
+  padding-right: 3%; }
+
+.footer__end {
+  text-align: center;
+  font-size: 17px; }
+
+@media (min-width: 800px) {
+  .footer__links {
+    display: flex;
+    direction: row;
+    justify-content: center;
+    padding-top: 1vh;
+    column-gap: 10%;
+    font-size: 20px; } }
+
+.footer__end {
+  text-align: center;
+  font-size: 17px; }
+
 /*Paginación*/
 .pagination__class {
   background-color: black;
