--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -484,20 +484,24 @@ body{
 }
 
 .informacionAdicional__titulo{
-	font-size: 1.5rem;
+	text-align: center;
+	h1{
+		font-size: 1.5rem;
+	}
+	
 }
 	
 .informacionAdicional__segundoTitulo{
-	font-size: 1.5rem;
+	font-size: 1.2rem;
 }
 	
 .informacionAdicional__subtitulo{
-	font-size: 1.1rem;
+	font-size: 1rem;
 	p, ul{
-		font-size: 0.9rem;
+		font-size: 0.8rem;
 	}
 	li{
-		font-size: 0.8rem;
+		font-size: 0.7rem;
 	}
 }
 
@@ -512,7 +516,7 @@ body{
 		font-size: 1.8rem;
 	}
 	.informacionAdicional__subtitulo{
-		font-size: 1.4rem;
+		font-size: 1.5rem;
 		p, ul{
 			font-size: 1.2rem;
 		}
